fix(build): edit Dockerfile for better appearance

--- a/telekom_project/section2/Dockerfile
+++ b/telekom_project/section2/Dockerfile
@@ -1,17 +1,19 @@
+# a) Базовый образ
 FROM ubuntu:22.04
 
-# Устанавливаем зависимости
+# b) Устанавливаем зависимости: python3, pip, requests
 RUN apt-get update && \
-    apt-get install -y python3 python3-pip python-is-python3 && \
-    apt-get clean && \
+    DEBIAN_FRONTEND=noninteractive apt-get install -y \
+      python3 python3-pip && \
+    pip3 install requests && \
     rm -rf /var/lib/apt/lists/*
 
-# Копируем скрипт
+# c) Копируем скрипт
+COPY ./section1/http_checker.py /app/http_checker.py
 WORKDIR /app
-COPY ./section1/http_checker.py ./section1/requirements.txt ./
 
-# Устанавливаем зависимости
-RUN pip install --no-cache-dir -r requirements.txt
+# Сделать скрипт исполняемым
+RUN chmod +x http_checker.py
 
-# Запускаем скрипт
-CMD ["python", "http_checker.py"]
+# d) При старте контейнера запускаем скрипт
+ENTRYPOINT ["python3", "http_checker.py"]
